Tests/CompilerTests/negative/invalid-return.hylo
struct A {}

fun f0() {
  ((),)
}

fun f1() {
  return ((),)
}

fun f2() -> A {
  return
}
